# thesis

./: 30040_Thomas_Prior_submission_1.zip.sha256  README.md  model_params_batch_256_epochs_2_mcdrop_seed_5453_udist_0.25_plot.txt  model_params_batch_256_epochs_2_mcdrop_seed_7876974563457_udist_0.25_plot.txt
experiment_5_reparameterisation_reimplementation/: #experiment_run.py#  30040_Experiment_5.ipynb  __init__.py  __init__.py~  batch_gen_rho.py  experiment_run.py  experiment_training_lib.py  linear_bayesian.py  mini_model_reparam.py  model_params.post  notebook_test.py  py_ex_5_gpuL_test.slurm.batch_mrho_0_brho_0  py_ex_5_gpuL_test.slurm.batch_mrho_0_brho_1  py_ex_5_gpuL_test.slurm.batch_mrho_0_brho_2  py_ex_5_gpuL_test.slurm.batch_mrho_0_brho_3  py_ex_5_gpuL_test.slurm.batch_mrho_1_brho_0  py_ex_5_gpuL_test.slurm.batch_mrho_1_brho_1  py_ex_5_gpuL_test.slurm.batch_mrho_1_brho_2  py_ex_5_gpuL_test.slurm.batch_mrho_1_brho_3  py_ex_5_gpuL_test.slurm.batch_mrho_2_brho_0  py_ex_5_gpuL_test.slurm.batch_mrho_2_brho_1  py_ex_5_gpuL_test.slurm.batch_mrho_2_brho_2  py_ex_5_gpuL_test.slurm.batch_mrho_2_brho_3  py_ex_5_gpuL_test.slurm.batch_mrho_3_brho_0  py_ex_5_gpuL_test.slurm.batch_mrho_3_brho_2  py_ex_5_gpuL_test.slurm.batch_mrho_3_brho_3  pyproject.toml  pyproject.toml~  test.py  test.py~
experiment_5_reparameterisation_reimplementation/Experiment_5_reparam_retry.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
experiment_5_reparameterisation_reimplementation/archive/: batch_exec.sh
experiment_5_reparameterisation_reimplementation/batch_jobs/: py_ex_3_gpuL.slurm  (+1 more)
(+245 files in other folders)
