[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reparam"
version = "0.1.2"
description = "A Python package that can be imported to Google Colab to run reparameterisation."
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
	     "torch",
	     "matplotlib"
	     ]

[tool.setuptools.packages.find]
where = ["."]
include = ["reparam*"]